--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,9 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-
+.idea
+.idea/*
+.idea/workspace.xm
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
